--- a/app/css/main.css
+++ b/app/css/main.css
@@ -17,18 +17,13 @@ body {
 }
 
 .shade{
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0,0,0,.65);
+  background-color: rgba(0,0,0,.55);
 }
 
 /*Upper navbar*/
-.uppeNavigation {
+nav.uppeNavigation {
   position: absolute;
-  background-color: rgba(0,0,0,.4)
+  background-color: rgba(0,0,0,.4);
 }
 
 ul.right li a {
@@ -36,6 +31,13 @@ ul.right li a {
  color: #F0F0F0;
  font-weight: normal;
  z-index: 1;
+  -webkit-transition: background-color .5s;
+  transition: background-color .5s;
+}
+
+ul.right li a:hover{
+  background-color: rgba(0,0,0,.70);
+
 }
 
 a.logotype {
@@ -65,10 +67,17 @@ div.signlineUpper {
 }
 
 
-
 /*Red digit 4*/
 .mid{
 color: #ff0000;
+}
+
+/*div:nth-child(2){
+  color: #ff0000;
+}*/
+
+h1.header:nth-child(2) {
+  color: #ff0000;
 }
 
 /*Red Button*/
@@ -102,6 +111,10 @@ div img.logo{
   margin: 0px; 
 }
 
+div img.logo + p, [p=] {
+text-transform: uppercase;
+}
+
 /*Redline of middle columns*/
 
 p.visualFont + div{
@@ -109,6 +122,12 @@ p.visualFont + div{
   height: 3px;
   width: 90%;
   margin: auto; 
+}
+
+p > p{
+  background-color: #B2B2B2;
+  margin: 0px;
+  padding: 0px; 
 }
 
 
@@ -119,9 +138,7 @@ p.visualFont{
   padding: 0px;
 }
 
-div img.logo + p{
-text-transform: uppercase;
-}
+
 
 /*Footer*/
 div.footerUp{
@@ -141,15 +158,9 @@ div.copyright {
   background-color: #323232;
   color: #cccccc;
   text-align: center;
-  height: 60px;
-  line-height: 60px;
+  height: 50px;
+  line-height: 50px;
   width: 100%;
-}
-
-/*Thin Red line on the top and the bottom of site*/
-div.styleline {
-  background-color: #FF0000;
-  height: 1px;
-  width: 100%;
+  border-bottom: 1px solid red;
 }
 
