--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,14 +1,133 @@
-.blockLayout
-	column-count: 3
-	column-gap: 20px
-	padding: 0 5%
-.noteBlock
-	display: inline-block
-	margin: 10px 0
-	padding: 20px 10px
-	width: 100%
-	box-shadow: 1px 1px 10px 0 #000
-	text-align: center
-	word-break: break-all
-.parallax-container
+body
+	font-family: Helvetica, Arial, sans-serif
+	margin: 0
+	padding: 0
+
+section
 	height: 600px
+	margin: 0
+	padding: 0
+
+.parallax-container
+	height: 700px
+	width: 100%
+	text-align: center
+	background-color: rgba(0,0,0,.55)
+
+	/*Upper navbar*/
+nav
+	position: fixed
+	background-color: rgba(0,0,0,.2)
+	z-index: 1
+	li>a
+		color: #c8c8c8
+		font-weight: 100
+		z-index: 1
+		-webkit-transition: background-color .5s
+		transition: background-color .5s
+	li>a:hover
+		z-index: 2
+		background-color: rgba(0, 0, 0, 0.5)
+		color: rgb(255, 255, 255)
+
+
+/*web4evo LOGO*/
+.mainSign
+	margin-top: 250px
+
+h5.header, h1.header
+	color: #cdcdcd
+	z-index: 100
+	margin-bottom: 0
+	margin-top: 2px
+
+/*Upper Red line of Logo*/
+
+.signlineUpper
+	background-color: #FF0000
+	height: 4px
+	width: 250px
+	margin: 0 auto
+	padding: 0
+
+/*Red digit 4*/
+.mid
+	color: #ff0000
+
+
+h1.header:nth-child(2)
+	color: #ff0000
+
+/*Red Button*/
+.btn
+	background-color: #cccaca
+	color: #000000
+
+.btn:hover
+	background-color: #ff0000
+
+.backgroundHide
+	position: absolute
+	height: 600px
+	margin: 0
+	padding: 0
+	z-index: 0
+
+/*Mid colunms*/
+.midColumn
+	text-align: center
+	padding-top: 100px
+
+div
+	img.logo
+		width: 80px
+		padding: 0
+		margin: 0
+
+div
+	img.logo + p
+		text-transform: uppercase
+
+/*Redline of middle columns*/
+
+p
+	.visualFont + div
+		background-color: #FF0000
+		height: 3px
+		width: 80%
+		margin: auto
+
+
+.upperTextStyle
+	text-transform: uppercase
+
+.visualFont
+	letter-spacing: -1px
+	text-transform: uppercase
+	font-size: 33px
+	margin: 0
+	padding: 0
+
+/*Footer*/
+.footerUp
+	text-align: center
+	margin: 0
+
+
+/*IMAGES HTML, CSS, ANGULAR...*/
+.progs
+	img
+		margin: 20px 20px 0 20px
+		padding: 0
+		border: 2px solid #ff0000
+		height: 100px
+
+footer
+	background-color: #323232
+	color: #cccccc
+	text-align: center
+	height: 50px
+	line-height: 50px
+	width: 100%
+	border-bottom: 1px solid red
+
