--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -32,10 +32,6 @@ nav
 		background-color: rgba(0, 0, 0, 0.5)
 		color: rgb(255, 255, 255)
 
-//.hide
-//	transition:  opacity 1s
-
-
 /*web4evo LOGO*/
 .mainSign
 	margin-top: 250px
@@ -56,11 +52,7 @@ h5.header, h1.header
 	padding: 0
 
 /*Red digit 4*/
-.mid
-	color: #ff0000
-
-
-h1.header:nth-child(2)
+.mid, h1.header:nth-child(2)
 	color: #ff0000
 
 /*Red Button*/
@@ -95,12 +87,11 @@ div
 
 /*Redline of middle columns*/
 
-p
-	.visualFont + div
-		background-color: #FF0000
-		height: 3px
-		width: 80%
-		margin: auto
+.visualFont + div
+	background-color: #FF0000
+	height: 3px
+	width: 80%
+	margin: auto
 
 
 .upperTextStyle
@@ -124,7 +115,7 @@ p
 	img
 		margin: 20px 20px 0 20px
 		padding: 0
-		border: 2px solid #ff0000
+		//border: 2px solid #ff0000
 		height: 100px
 
 footer
