--- a/app/css/media.css
+++ b/app/css/media.css
@@ -5,7 +5,7 @@
 @media only screen and (max-width : 1200px) {
 
 
-
+}
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
 
