--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -47,7 +47,7 @@ h5.header, h1.header
 .signlineUpper
 	background-color: #FF0000
 	height: 4px
-	width: 250px
+	width: 300px
 	margin: 0 auto
 	padding: 0
 
@@ -75,6 +75,7 @@ h5.header, h1.header
 	text-align: center
 	padding-top: 100px
 
+
 div
 	img.logo
 		width: 80px
@@ -85,6 +86,10 @@ div
 	img.logo + p
 		text-transform: uppercase
 
+
+
+
+
 /*Redline of middle columns*/
 
 .visualFont + div
@@ -93,8 +98,8 @@ div
 	width: 80%
 	margin: auto
 
-
 .upperTextStyle
+
 	text-transform: uppercase
 
 .visualFont
@@ -109,14 +114,12 @@ div
 	text-align: center
 	margin: 0
 
-
 /*IMAGES HTML, CSS, ANGULAR...*/
 .progs
 	img
 		margin: 20px 20px 0 20px
 		padding: 0
-		//border: 2px solid #ff0000
-		height: 100px
+		height: 70px
 
 footer
 	background-color: #323232
@@ -130,7 +133,7 @@ footer
 .dotted
 	position: fixed
 	top: 40%
-	left: 80%
+	left: 85%
 	width: 50px
 	z-index: 10
 	list-style-type: none 
@@ -147,7 +150,7 @@ footer
 	ul
 		li
 			position: relative
-			padding-bottom: 20px
+			padding-bottom: 15px
 			padding-left: 35%
 			color: #FF0000
 
@@ -156,7 +159,7 @@ footer
 	a
 		display: block
 		width: 50px
-		height: 6px
+		height: 5px
 		background-color: rgba(255,0,0,.3)
 		-webkit-transition: 1.5s
 		transition: 1.5s
@@ -165,16 +168,15 @@ footer
 .dotted
 	a:hover
 		width: 50px
-		height: 6px
-		background-color: #FFBEBE
+		height: 5px
+		background-color: #FF0000
 
 
 
 .dotted a.active
-	width: 80px 
-	height: 6px 
+	width: 70px 
+	height: 5px 
 	background-color: #FF0000 
-
 
 
 #section01 
@@ -184,9 +186,13 @@ footer
 
 #section02 
 	position: absolute 
-	top: 2000px 
+	top: 700px 
 
 
 #section03 
+	position: absolute 
+	top: 2000px 
+
+#section04 
 	position: absolute 
 	top: 3420px 
