--- a/app/css/main.css
+++ b/app/css/main.css
@@ -47,7 +47,7 @@ h5.header, h1.header {
 .signlineUpper {
   background-color: #FF0000;
   height: 4px;
-  width: 250px;
+  width: 300px;
   margin: 0 auto;
   padding: 0; }
 
@@ -109,7 +109,7 @@ div img.logo + p {
 .progs img {
   margin: 20px 20px 0 20px;
   padding: 0;
-  height: 100px; }
+  height: 70px; }
 
 footer {
   background-color: #323232;
@@ -123,7 +123,7 @@ footer {
 .dotted {
   position: fixed;
   top: 40%;
-  left: 80%;
+  left: 85%;
   width: 50px;
   z-index: 10;
   list-style-type: none; }
@@ -135,26 +135,26 @@ footer {
 
 .dotted ul li {
   position: relative;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
   padding-left: 35%;
   color: #FF0000; }
 
 .dotted a {
   display: block;
   width: 50px;
-  height: 6px;
+  height: 5px;
   background-color: rgba(255, 0, 0, 0.3);
   -webkit-transition: 1.5s;
   transition: 1.5s; }
 
 .dotted a:hover {
   width: 50px;
-  height: 6px;
-  background-color: #FFBEBE; }
+  height: 5px;
+  background-color: #FF0000; }
 
 .dotted a.active {
-  width: 80px;
-  height: 6px;
+  width: 70px;
+  height: 5px;
   background-color: #FF0000; }
 
 #section01 {
@@ -163,8 +163,12 @@ footer {
 
 #section02 {
   position: absolute;
-  top: 2000px; }
+  top: 700px; }
 
 #section03 {
+  position: absolute;
+  top: 2000px; }
+
+#section04 {
   position: absolute;
   top: 3420px; }
