--- a/app/css/media.css
+++ b/app/css/media.css
@@ -1,11 +1,7 @@
 @media only screen and (max-width: 320px) {
-  .block {
-    width: 100%; } }
+  [class~=backgroundHide] {
+    display: none; } }
 
 @media only screen and (min-width: 321px) and (max-width: 1023px) {
-  .block {
-    width: 125px; } }
-
-@media only screen and (min-width: 1024px) {
-  .block {
-    float: none; } }
+  [class~=backgroundHide] {
+    display: none; } }
