--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -14,10 +14,10 @@ $large: 1024px
     @media only screen and (min-width: $large)
       @content
 
-.block
-  @include respond-to(handhelds)
-    width: 100%
-  @include respond-to(medium-screens)
-    width: 125px
-  @include respond-to(wide-screens)
-    float: none
+@include respond-to(handhelds)
+  [class~=backgroundHide]
+    display: none
+@include respond-to(medium-screens)
+  [class~=backgroundHide]
+    display: none
+@include respond-to(wide-screens)
