--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -14,6 +14,7 @@ section
 	text-align: center
 	background-color: rgba(0,0,0,.55)
 
+
 	/*Upper navbar*/
 nav
 	position: fixed
@@ -181,7 +182,7 @@ footer
 
 #section01 
 	position: absolute 
-	top: 0
+	top: 200px
 
 
 #section02 
