--- a/app/css/media.css
+++ b/app/css/media.css
@@ -1,7 +1,37 @@
 @media only screen and (max-width: 320px) {
+  [class~=extra] {
+    display: none; }
   [class~=backgroundHide] {
-    display: none; } }
+    visibility: hidden; }
+  .parallax-container {
+    height: 400px; }
+  .innerCard p:nth-child(2), .innerCard p:nth-child(4) {
+    font-size: 150%; }
+  .middleCards p:nth-child(3) {
+    font-size: 150%; }
+  .progs img {
+    margin: 5px 5px 0 0;
+    padding: 0;
+    max-height: 35px; }
+  h1 {
+    font-size: 30px; }
+  h5 {
+    font-size: 90%; } }
 
-@media only screen and (min-width: 321px) and (max-width: 1023px) {
+@media only screen and (min-width: 321px) and (max-width: 599px) {
+  [class~=extra] {
+    display: none; }
   [class~=backgroundHide] {
-    display: none; } }
+    visibility: hidden; }
+  .visualFont {
+    font-size: 20px; }
+  .progs img {
+    margin: 5px 5px 0 0;
+    padding: 0;
+    max-width: 55px; } }
+
+@media only screen and (min-width: 600px) and (max-width: 1199px) {
+  [class~=extra] {
+    max-width: 50%; }
+  #section04 {
+    top: 3550px; } }
