--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,3 +1,6 @@
+$text-color: #c8c8c8
+$additional-color: #FF0000
+
 body
 	font-family: Helvetica, Arial, sans-serif
 	margin: 0
@@ -23,10 +26,9 @@ nav
 	transition:  opacity 1s
 	opacity: 1
 	li>a
-		color: #c8c8c8
+		color: $text-color
 		font-weight: 100
 		z-index: 1
-		-webkit-transition: background-color .5s
 		transition: background-color .5s
 	li>a:hover
 		z-index: 2
@@ -34,37 +36,41 @@ nav
 		color: rgb(255, 255, 255)
 
 /*web4evo LOGO*/
+
+a.brand-logo
+	color: $text-color
+	> span
+		color: $additional-color
+
 .mainSign
 	margin-top: 250px
 
-h5.header, h1.header
-	color: #cdcdcd
+h5, h1
+	color: $text-color
+	//text-transform: uppercase
 	z-index: 100
 	margin-bottom: 0
 	margin-top: 2px
 
 /*Upper Red line of Logo*/
 
-.signlineUpper
-	background-color: #FF0000
+.signline
+	background-color: $additional-color
 	height: 4px
-	width: 300px
+	max-width: 300px
 	margin: 0 auto
 	padding: 0
 
 /*Red digit 4*/
-.mid, h1.header:nth-child(2)
-	color: #ff0000
+.mid, h1:nth-child(2), .btn:hover
+	color: $additional-color
 
 /*Red Button*/
 .btn
-	background-color: #cccaca
+	background-color: $text-color
 	color: #000000
 
-.btn:hover
-	background-color: #ff0000
-
-.backgroundHide
+.backgroundHide, .extra
 	position: absolute
 	height: 600px
 	margin: 0
@@ -76,39 +82,48 @@ h5.header, h1.header
 	text-align: center
 	padding-top: 100px
 
-
 div
 	img.logo
-		width: 80px
+		max-width: 80px
 		padding: 0
 		margin: 0
 
-div
-	img.logo + p
-		text-transform: uppercase
-
-
-
-
-
+section.midColumn p
+	text-transform: uppercase
+	color: #00b0ff
 /*Redline of middle columns*/
 
-.visualFont + div
-	background-color: #FF0000
-	height: 3px
-	width: 80%
-	margin: auto
 
-.upperTextStyle
+.innerCard
+	p:nth-child(1)
+		text-transform: uppercase
+	p:nth-child(2), p:nth-child(4)
+		letter-spacing: -1px
+		text-transform: uppercase
+		font-size: 33px
+		margin: 0
+		padding: 0
+	div:nth-child(3)
+		background-color: $additional-color
+		height: 3px
+		width: 80%
+		margin: auto
 
-	text-transform: uppercase
-
-.visualFont
-	letter-spacing: -1px
-	text-transform: uppercase
-	font-size: 33px
-	margin: 0
-	padding: 0
+.middleCards
+	margin-bottom: 60px
+	p:nth-child(2)
+		text-transform: uppercase
+	p:nth-child(3)
+		letter-spacing: -1px
+		text-transform: uppercase
+		font-size: 33px
+		margin: 0
+		padding: 0
+	div:nth-child(4)
+		background-color: $additional-color
+		height: 3px
+		width: 80%
+		margin: auto
 
 /*Footer*/
 .footerUp
@@ -118,24 +133,24 @@ div
 /*IMAGES HTML, CSS, ANGULAR...*/
 .progs
 	img
-		margin: 20px 20px 0 20px
+		margin: 0
 		padding: 0
-		height: 70px
+		max-width: 48px
 
 footer
 	background-color: #323232
 	color: #cccccc
 	text-align: center
-	height: 50px
-	line-height: 50px
+	padding: 1%
 	width: 100%
-	border-bottom: 1px solid red
+	border-bottom: 1px solid $additional-color
 
+//Pagination
 .dotted
 	position: fixed
-	top: 40%
+	top: 36%
 	left: 85%
-	width: 50px
+	max-width: 50px
 	z-index: 10
 	list-style-type: none 
 
@@ -144,7 +159,6 @@ footer
 	ul
 		position: relative
 		padding: 5px
-		padding-left: 20%
 
 
 .dotted
@@ -153,8 +167,7 @@ footer
 			position: relative
 			padding-bottom: 15px
 			padding-left: 35%
-			color: #FF0000
-
+			color: $additional-color
 
 .dotted
 	a
@@ -162,27 +175,23 @@ footer
 		width: 50px
 		height: 5px
 		background-color: rgba(255,0,0,.3)
-		-webkit-transition: 1.5s
 		transition: 1.5s
-
 
 .dotted
 	a:hover
 		width: 50px
 		height: 5px
-		background-color: #FF0000
-
-
+		background-color: $additional-color
 
 .dotted a.active
 	width: 70px 
 	height: 5px 
-	background-color: #FF0000 
+	background-color: $additional-color
 
 
 #section01 
 	position: absolute 
-	top: 200px
+	top: 0
 
 
 #section02 
@@ -196,4 +205,4 @@ footer
 
 #section04 
 	position: absolute 
-	top: 3420px 
+	top: 3450px
