--- a/app/css/main.css
+++ b/app/css/main.css
@@ -33,6 +33,19 @@ nav {
     background-color: rgba(0, 0, 0, 0.5);
     color: white; }
 
+#mobile-nav {
+  height: 300px;
+  opacity: .5;
+  filter: alpha(opacity=50); }
+  #mobile-nav li:nth-child(1) {
+    margin-top: 40px; }
+  #mobile-nav li a {
+    color: black;
+    height: 50px; }
+
+#sidenav-overlay {
+  z-index: -1; }
+
 /*web4evo LOGO*/
 a.brand-logo {
   color: #c8c8c8; }
@@ -93,7 +106,7 @@ section.midColumn p {
 .innerCard p:nth-child(2), .innerCard p:nth-child(4) {
   letter-spacing: -1px;
   text-transform: uppercase;
-  font-size: 33px;
+  font-size: 27px;
   margin: 0;
   padding: 0; }
 
@@ -110,7 +123,7 @@ section.midColumn p {
   .middleCards p:nth-child(3) {
     letter-spacing: -1px;
     text-transform: uppercase;
-    font-size: 33px;
+    font-size: 27px;
     margin: 0;
     padding: 0; }
   .middleCards div:nth-child(4) {
@@ -119,20 +132,19 @@ section.midColumn p {
     width: 80%;
     margin: auto; }
 
-/*Footer*/
-.footerUp {
-  text-align: center;
-  margin: 0; }
-
-/*IMAGES HTML, CSS, ANGULAR...*/
 .progs img {
   margin: 0;
   padding: 0;
   max-width: 48px; }
 
+/*Footer*/
+.footerUp {
+  text-align: center;
+  margin: 0; }
+
 footer {
   background-color: #323232;
-  color: #cccccc;
+  color: #c8c8c8;
   text-align: center;
   padding: 1%;
   width: 100%;
@@ -176,15 +188,15 @@ footer {
 
 #section01 {
   position: absolute;
-  top: 0; }
+  top: 700px; }
 
 #section02 {
   position: absolute;
-  top: 700px; }
+  top: 2000px; }
 
 #section03 {
   position: absolute;
-  top: 2000px; }
+  top: 3200px; }
 
 #section04 {
   position: absolute;
