--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -35,8 +35,21 @@ nav
 		background-color: rgba(0, 0, 0, 0.5)
 		color: rgb(255, 255, 255)
 
-/*web4evo LOGO*/
+//mobile
+#mobile-nav
+	height: 300px
+	opacity: .5
+	filter: alpha(opacity=50)
+	li:nth-child(1)
+		margin-top: 40px
+	li a
+		color: black
+		height: 50px
 
+#sidenav-overlay
+	z-index: -1
+
+/*web4evo LOGO*/
 a.brand-logo
 	color: $text-color
 	> span
@@ -100,7 +113,7 @@ section.midColumn p
 	p:nth-child(2), p:nth-child(4)
 		letter-spacing: -1px
 		text-transform: uppercase
-		font-size: 33px
+		font-size: 27px
 		margin: 0
 		padding: 0
 	div:nth-child(3)
@@ -116,7 +129,7 @@ section.midColumn p
 	p:nth-child(3)
 		letter-spacing: -1px
 		text-transform: uppercase
-		font-size: 33px
+		font-size: 27px
 		margin: 0
 		padding: 0
 	div:nth-child(4)
@@ -125,21 +138,21 @@ section.midColumn p
 		width: 80%
 		margin: auto
 
-/*Footer*/
-.footerUp
-	text-align: center
-	margin: 0
-
-/*IMAGES HTML, CSS, ANGULAR...*/
 .progs
 	img
 		margin: 0
 		padding: 0
 		max-width: 48px
 
+/*Footer*/
+
+.footerUp
+	text-align: center
+	margin: 0
+
 footer
 	background-color: #323232
-	color: #cccccc
+	color: $text-color
 	text-align: center
 	padding: 1%
 	width: 100%
@@ -188,21 +201,20 @@ footer
 	height: 5px 
 	background-color: $additional-color
 
+#section01
+	position: absolute
+	top: 700px
 
-#section01 
-	position: absolute 
-	top: 0
+#section02
+	position: absolute
+	top: 2000px
 
+#section03
+	position: absolute
+	top: 3200px
 
-#section02 
-	position: absolute 
-	top: 700px 
-
-
-#section03 
-	position: absolute 
-	top: 2000px 
-
-#section04 
-	position: absolute 
+#section04
+	position: absolute
 	top: 3450px
+
+
