--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -147,12 +147,6 @@ section.midColumn p
 		width: 80%
 		margin: auto
 
-.progs
-	img
-		margin: 0
-		padding: 0
-		max-width: 48px
-
 /*Footer*/
 
 .footerUp
@@ -168,21 +162,21 @@ footer
 	border-bottom: 1px solid $additional-color
 
 //Pagination
-.dotted
+div.range
 	position: fixed
-	top: 36%
+	top: 40%
 	left: 85%
 	max-width: 50px
 	z-index: 10
 	list-style-type: none
 
-.dotted
+.range
 	ul
 		position: relative
 		padding: 5px
 
 
-.dotted
+.range
 	ul
 		li
 			position: relative
@@ -211,15 +205,15 @@ footer
 
 #section01
 	position: absolute
-	top: 700px
+	top: 200px
 
 #section02
 	position: absolute
-	top: 2000px
+	top: 700px
 
 #section03
 	position: absolute
-	top: 3200px
+	top: 2000px
 
 #section04
 	position: absolute
