--- a/app/css/main.css
+++ b/app/css/main.css
@@ -139,11 +139,6 @@ section.midColumn p {
     width: 80%;
     margin: auto; }
 
-.progs img {
-  margin: 0;
-  padding: 0;
-  max-width: 48px; }
-
 /*Footer*/
 .footerUp {
   text-align: center;
@@ -157,19 +152,19 @@ footer {
   width: 100%;
   border-bottom: 1px solid #FF0000; }
 
-.dotted {
+div.range {
   position: fixed;
-  top: 36%;
+  top: 40%;
   left: 85%;
   max-width: 50px;
   z-index: 10;
   list-style-type: none; }
 
-.dotted ul {
+.range ul {
   position: relative;
   padding: 5px; }
 
-.dotted ul li {
+.range ul li {
   position: relative;
   padding-bottom: 15px;
   padding-left: 35%;
@@ -195,15 +190,15 @@ footer {
 
 #section01 {
   position: absolute;
-  top: 700px; }
+  top: 200px; }
 
 #section02 {
   position: absolute;
-  top: 2000px; }
+  top: 700px; }
 
 #section03 {
   position: absolute;
-  top: 3200px; }
+  top: 2000px; }
 
 #section04 {
   position: absolute;
