--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,7 +1,12 @@
 body {
   font-family: Helvetica, Arial, sans-serif;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+::-webkit-scrollbar {
+  display: none; }
 
 section {
   height: 600px;
@@ -67,7 +72,7 @@ h5, h1 {
 /*Upper Red line of Logo*/
 .signline {
   background-color: #FF0000;
-  height: 4px;
+  height: 3px;
   max-width: 300px;
   margin: 0 auto;
   padding: 0; }
@@ -81,9 +86,10 @@ h5, h1 {
   color: #000000;
   background-color: #c8c8c8; }
 
-.innerCard :hover {
-  color: #000000;
-  background-color: #a2a2a2; }
+.innerCard .waves-effect:hover {
+  opacity: .8;
+  background-color: #c8c8c8;
+  color: #000000; }
 
 .backgroundHide, .extra {
   position: absolute;
@@ -139,10 +145,18 @@ section.midColumn p {
     width: 80%;
     margin: auto; }
 
+.description {
+  opacity: .8; }
+
 /*Footer*/
-.footerUp {
+.footer-content {
   text-align: center;
-  margin: 0; }
+    text-align-margin: 0; }
+
+.contact-sign {
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom: 0; }
 
 footer {
   background-color: #323232;
